// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiTokens renders empty result 1`] = `
<div>
  <div>
    <div
      class="css-q8xgg6-SettingsPageHeader e1nr98yc2"
    >
      <div
        class="css-1mfa9vw-TitleAndActions e1nr98yc8"
      >
        <div
          class="css-u3au9h-TitleWrapper e1nr98yc7"
        >
          <div
            class="css-18xqiae-Title e1nr98yc6"
          >
            <h4
              class="css-jz1c1u-HeaderTitle e12cn1y20"
            >
              Auth Tokens
            </h4>
          </div>
        </div>
        <div
          class="css-1srjsw5-Action e1nr98yc3"
        >
          <a
            aria-disabled="false"
            aria-label="Create New Token"
            class="e1b8u3ky2 css-1wsjsdp-Link-StyledButton-getColors-getButtonStyles e1ycxor00"
            data-test-id="create-token"
            role="button"
          >
            <span
              class="css-at526y-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
              role="presentation"
            />
            <span
              class="css-1z0n9wg-ButtonLabel e1b8u3ky1"
            >
              Create New Token
            </span>
          </a>
        </div>
      </div>
    </div>
    <a
      class="ear9tuy3 css-l9fiww-Link-StyledLink e1ycxor00"
    >
      <div
        class="css-s2q57m-AlertLinkText ear9tuy0"
      >
        Auth Tokens are tied to the logged in user, meaning they'll stop working if the user leaves the organization! We suggest using internal integrations to create/manage tokens tied to the organization instead.
      </div>
      <span
        class="css-1awjzu4-IconWrapper-IconLink ear9tuy1"
      >
        <svg
          class="css-grvq9j-IconChevron"
          fill="currentColor"
          height="16px"
          viewBox="0 0 16 16"
          width="16px"
        >
          <path
            d="M14,11.75a.74.74,0,0,1-.53-.22L8,6.06,2.53,11.53a.75.75,0,0,1-1.06-1.06l6-6a.75.75,0,0,1,1.06,0l6,6a.75.75,0,0,1,0,1.06A.74.74,0,0,1,14,11.75Z"
          />
        </svg>
      </span>
    </a>
    <div
      class="css-1j3tvli-TextBlock ezm48a60"
    >
      Authentication tokens allow you to perform actions against the Sentry API on behalf of your account. They're the easiest way to get started using the API.
    </div>
    <div
      class="css-1j3tvli-TextBlock ezm48a60"
    >
      <span>
        <span>
          For more information on how to use the web API, see our 
        </span>
        <a
          class="css-1ecfdi8-Anchor ehytxfi0"
          href="https://docs.sentry.io/api/"
          rel="noreferrer noopener"
          target="_blank"
        >
          <span>
            documentation
          </span>
        </a>
        <span>
          .
        </span>
      </span>
    </div>
    <div
      class="css-2fj46w-Panel edxrl2k0"
    >
      <div
        class="css-1v7t0a0-PanelHeader-getPadding eknsyxy0"
      >
        Auth Token
      </div>
      <div
        class="css-pemm1r-PanelBody-textStyles eszvord0"
      >
        <div
          class="css-fvblbb-EmptyMessage-EmptyMessage ege7ww24"
          data-test-id="empty-message"
        >
          <div
            class="css-u2uxsp-TextBlock-Description ege7ww21"
          >
            You haven't created any authentication tokens yet.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApiTokens renders with result 1`] = `
<div>
  <div>
    <div
      class="css-q8xgg6-SettingsPageHeader e1nr98yc2"
    >
      <div
        class="css-1mfa9vw-TitleAndActions e1nr98yc8"
      >
        <div
          class="css-u3au9h-TitleWrapper e1nr98yc7"
        >
          <div
            class="css-18xqiae-Title e1nr98yc6"
          >
            <h4
              class="css-jz1c1u-HeaderTitle e12cn1y20"
            >
              Auth Tokens
            </h4>
          </div>
        </div>
        <div
          class="css-1srjsw5-Action e1nr98yc3"
        >
          <a
            aria-disabled="false"
            aria-label="Create New Token"
            class="e1b8u3ky2 css-1wsjsdp-Link-StyledButton-getColors-getButtonStyles e1ycxor00"
            data-test-id="create-token"
            role="button"
          >
            <span
              class="css-at526y-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
              role="presentation"
            />
            <span
              class="css-1z0n9wg-ButtonLabel e1b8u3ky1"
            >
              Create New Token
            </span>
          </a>
        </div>
      </div>
    </div>
    <a
      class="ear9tuy3 css-l9fiww-Link-StyledLink e1ycxor00"
    >
      <div
        class="css-s2q57m-AlertLinkText ear9tuy0"
      >
        Auth Tokens are tied to the logged in user, meaning they'll stop working if the user leaves the organization! We suggest using internal integrations to create/manage tokens tied to the organization instead.
      </div>
      <span
        class="css-1awjzu4-IconWrapper-IconLink ear9tuy1"
      >
        <svg
          class="css-grvq9j-IconChevron"
          fill="currentColor"
          height="16px"
          viewBox="0 0 16 16"
          width="16px"
        >
          <path
            d="M14,11.75a.74.74,0,0,1-.53-.22L8,6.06,2.53,11.53a.75.75,0,0,1-1.06-1.06l6-6a.75.75,0,0,1,1.06,0l6,6a.75.75,0,0,1,0,1.06A.74.74,0,0,1,14,11.75Z"
          />
        </svg>
      </span>
    </a>
    <div
      class="css-1j3tvli-TextBlock ezm48a60"
    >
      Authentication tokens allow you to perform actions against the Sentry API on behalf of your account. They're the easiest way to get started using the API.
    </div>
    <div
      class="css-1j3tvli-TextBlock ezm48a60"
    >
      <span>
        <span>
          For more information on how to use the web API, see our 
        </span>
        <a
          class="css-1ecfdi8-Anchor ehytxfi0"
          href="https://docs.sentry.io/api/"
          rel="noreferrer noopener"
          target="_blank"
        >
          <span>
            documentation
          </span>
        </a>
        <span>
          .
        </span>
      </span>
    </div>
    <div
      class="css-2fj46w-Panel edxrl2k0"
    >
      <div
        class="css-1v7t0a0-PanelHeader-getPadding eknsyxy0"
      >
        Auth Token
      </div>
      <div
        class="css-pemm1r-PanelBody-textStyles eszvord0"
      >
        <div
          class="css-s6dcze-PanelItem-StyledPanelItem eu9lu7u7"
        >
          <div
            class="css-1yb85im-Controls eu9lu7u6"
          >
            <div
              class="css-fgwtz1-InputWrapper eu9lu7u5"
            >
              <div
                class="css-1biel1q-InputGroupWrap e13j5zq05"
              >
                <input
                  class="eqx5lw01 css-9x3akw-Input-inputStyles-StyledInput-getInputStyles-StyledInput e13j5zq03"
                  readonly=""
                  value="apitoken123"
                />
                <div
                  class="css-vdn3ll-InputItemsWrap-InputTrailingItemsWrap e13j5zq00"
                  data-test-id="input-trailing-items"
                />
              </div>
            </div>
            <button
              aria-disabled="false"
              aria-label="Remove"
              class="css-1qcj53z-StyledButton-getColors-getButtonStyles e1b8u3ky2"
              role="button"
              type="button"
            >
              <span
                class="css-vul34l-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
                role="presentation"
              />
              <span
                class="css-1z0n9wg-ButtonLabel e1b8u3ky1"
              >
                <span
                  class="css-1ywt59b-Icon e1b8u3ky0"
                >
                  <svg
                    data-test-id="icon-subtract"
                    fill="currentColor"
                    height="12px"
                    viewBox="0 0 16 16"
                    width="12px"
                  >
                    <path
                      d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.53A6.47,6.47,0,1,0,14.47,8,6.47,6.47,0,0,0,8,1.53Z"
                    />
                    <path
                      d="M11.28,8.75H4.72a.75.75,0,1,1,0-1.5h6.56a.75.75,0,1,1,0,1.5Z"
                    />
                  </svg>
                </span>
                Remove
              </span>
            </button>
          </div>
          <div
            class="css-7fc9vz-Details eu9lu7u4"
          >
            <div
              class="css-7ovylo-ScopesWrapper eu9lu7u3"
            >
              <div
                class="css-1g8z09y-Heading eu9lu7u0"
              >
                Scopes
              </div>
              <div
                class="css-avjeiu-ScopeList eu9lu7u2"
              >
                scope1, scope2
              </div>
            </div>
            <div>
              <div
                class="css-1g8z09y-Heading eu9lu7u0"
              >
                Created
              </div>
              <time
                class="css-szkkrh-Time eu9lu7u1"
              >
                <time>
                  Jan 12, 2018 2:01 AM
                </time>
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
